# armory-wallet-checksum-searcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
armory_wallet_checksum_crawler/: .gitignore  Cargo.toml
armory_wallet_checksum_crawler/src/: main.rs
src/: main.rs  processor.rs  processor_gpu.rs  search.rs  search_with_cpu.rs  search_with_gpu.rs  search_with_gpu_windows.rs  sha256-gpu.wgsl  sha256_gpu.rs  sha256_gpu_windows.rs  sha256_gpu_windows.wgsl  test_general.rs  types.rs
