[package]
name = "armory_wallet_checksum_searcher"
description = "A tool to locate and extract Armory wallets on corrupted and deleted hard drives"
version = "0.5.0"
edition = "2024"

readme = "README.md"
repository = "https://github.com/RecRanger/armory-wallet-checksum-searcher.git"
homepage = "https://github.com/RecRanger/armory-wallet-checksum-searcher"
license = "BSD-3-Clause"
authors = ["RecRanger <recranger+cratesio@proton.me>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10", features = ["asm"] }
log = "0.4.21"
simple_logger = "1.16.0"
clap = { version = "3.1.18", features = ["derive"] }
chrono = "0.4.38"
fern = "0.6.2"
humantime = "2.1.0"
indexmap = "2.2.6"
memmap2 = "0.9.9"
anyhow = "1.0.100"

# Writing to JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Progress Bar.
indicatif = { version = "0.18.3", features = ["rayon"] }

# Parallel execution.
rayon = "1.11.0"

# GPU execution.
wgpu = { version = "28.0.0", features = ["wgsl"] }
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"]}
once_cell = "1.21.3"
enum-map = "2.7.3"

[dev-dependencies]
rand = "0.8" # For test data only.
rstest = "0.26.1" # For parameterized tests.

[profile.release]
opt-level = 3
codegen-units = 1 # Performance optimization attempt.
panic = "abort"
lto = "fat" # Performance optimization attempt.
# strip = true # Makes output binary smaller. When using flamegraph/profiling, set to false/absent.
