[package]
name = "armory_wallet_checksum_crawler"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = "0.11.3"
sha2 = "0.10.8"
log = "0.4.21"
simple_logger = "1.16.0"
clap = { version = "3.1.18", features = ["derive"] }
chrono = "0.4.38"
fern = "0.6.2"
humantime = "2.1.0"
indexmap = "2.2.6"
